fix(text editor): style, overflow and theme

--- a/user-client/src/shared/components/text-editor/text-editor.css
+++ b/user-client/src/shared/components/text-editor/text-editor.css
@@ -1,3 +1,8 @@
+.custom-tiptap-wrapper {
+    height: calc(288px - 50px);
+    overflow-y: auto;
+}
+
 .custom-tiptap-wrapper .tiptap {
     padding: 12px 15px;
 }
@@ -23,24 +28,48 @@
     margin-left: 16px;
 }
 
+.custom-tiptap-wrapper .ProseMirror-focused {
+    outline: none;
+}
+
+.custom-tiptap-wrapper .tiptap p {
+    margin-bottom: 0.5rem;
+}
+
 .custom-tiptap-wrapper .tiptap h1 {
-    font-size: 28px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
 }
 
 .custom-tiptap-wrapper .tiptap h2 {
-    font-size: 24px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
 }
 
 .custom-tiptap-wrapper .tiptap h3 {
-    font-size: 18px;
+    font-size: 1rem;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
 }
 
-.custom-tiptap-wrapper .tiptap h1,
-.custom-tiptap-wrapper .tiptap h2,
-.custom-tiptap-wrapper .tiptap h3 {
-    font-weight: 600;
+.custom-tiptap-wrapper .tiptap img {
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.custom-tiptap-wrapper .ProseMirror-focused {
-    outline: none;
+.custom-tiptap-wrapper .tiptap a {
+    color: rgb(73, 149, 199);
+    text-decoration: none;
+}
+
+.custom-tiptap-wrapper .tiptap a:hover {
+    text-decoration: underline;
+}
+
+.dark .custom-tiptap-wrapper .tiptap a {
+    color: red;
 }
